--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,1 +1,12 @@
 @import "reset";
+
+section {
+    width : 800px;
+    height: 400px;
+    border: 1px soild #333;
+    margin: 100px auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 50px;
+}
