--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,14 +3,14 @@
 section {
     width : 800px;
     height: 400px;
-    border: 1px soild #333;
+    border: 1px solid #333;
     margin: 100px auto;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 50px;
+    
 
-
+/*
     h2 {
         font-size: 30px;
     }
@@ -68,5 +68,19 @@ section {
             opacity: 1;
         }
         }
+    }*/
+    h1 {
+        span {
+            font-size: 50px;
+            transform: scale(3);
+            opacity: 0;
+            transition: all 0.5s;
+        }
+    
+    &:hover{
+            transform: scale(1);
+            opacity: 1;
+        }
     }
 }
+
