hover 수정, 인터벌 안먹혀서 다시 검토해보기

--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ section h1 span {
   opacity: 0;
   transition: all 0.5s;
 }
-section h1:hover {
+section:hover h1 span {
   transform: scale(1);
   opacity: 1;
 }
