--- a/scss/style.scss
+++ b/scss/style.scss
@@ -75,12 +75,15 @@ section {
             transform: scale(3);
             opacity: 0;
             transition: all 0.5s;
-        }
-    
-    &:hover{
-            transform: scale(1);
-            opacity: 1;
+        
         }
     }
+    &:hover{
+        h1 {
+            span{
+                transform: scale(1);
+                opacity: 1;
+            }
+        }
+        }
 }
-
